# skystock

./: .gitignore  README.md  docker-compose.yml
logger/: Dockerfile  main.py  pyproject.toml
src/: Dockerfile  add_product.php  admin.php  edit_category.php  edit_product.php  edit_user.php  forgot_password.php  index.php  inventory.php  login.php  logout.php  register.php  reset_password.php  sales.php
src/PHPMailer/: PHPMailer.php
src/components/: categories_list.php  critical_product_list.php  error_toast.php  head.php  header.php  inventory_item.php  kpi.php  query_list.php  users_list.php
src/db/models/: Categories.php  Product.php  QuerySave.php  RecoveryToken.php  Users.php
src/forms/: add_category.php  add_product.php  delete_category.php  delete_product.php  delete_requests.php  delete_user.php  edit_category.php  edit_product.php  edit_user.php  forgot_password.php  login.php  logout.php  register.php  reset_password.php
src/lib/: SaveRequest.php
src/lib/orm/: Column.php  Constraint.php  OrmModel.php  Query.php  SearchResult.php
src/lib/service/: AuthService.php  ProductService.php  UserService.php
