[tool.poetry]
name = "cloudberry"
version = "0.1.0"
description = ""
authors = ["l-guerra-rago <lylian.gr@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pg8000 = "^1.31.1"
beanie = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"